# kibuilder

./: .gitignore  .zenodo.json  CITATION.cff  Dockerfile  README.md  docker-compose.yml  kibuilder.spec  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
docker/: entrypoint.sh  kasmvnc.yaml  xstartup
examples/openpauw/: kibuilder.yaml
packaging/: kibuilder.rb
resources/: entitlements.plist  kibuilder.icns
scripts/: build_app.sh  build_icon.sh  docker-run.sh  launcher.py  make_dmg.sh  make_icon.py
src/kibuilder/: __init__.py  cli.py  config.py  guide.py  heights.py  kicad.py  log.py  pcb.py
src/kibuilder/gui/: __init__.py  new_project.py  orient.py  project.py  splash.py  stage_preview.py
src/kibuilder/render/: __init__.py  board.py  part.py
